--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.scss
@@ -4,45 +4,75 @@ wc-fmb-panel-tab {
   flex: 1;
   min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
 
-
   .fmb-diagnos-row {
-    border-bottom: 1px solid $wc-color-15; //TODO: Not specified
+    border-bottom: 1px solid $wc-color-15;
     min-width: 1px;
     display: flex;
-    padding:11px 20px;
+    padding: 11px 20px;
+
+    @media (max-width: 992px) {
+      //but in compact mode, instead dont let it grow
+      flex-wrap: wrap;
+    }
 
     .fmb-diagnos-description {
+
       display: inline-block;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
       flex: 1 1 auto;
       min-width: 1px;
-      padding:0 15px 0 8px;
+      padding: 0 15px 0 8px;
 
       input[type=radio] {
-        margin-right: 6px;
+        margin-right: 4px;
+      }
+      label {
+        display: inline;
+        cursor: pointer;
+        @extend %wc-typo-07;
+        &.active {
+          @extend %wc-typo-08;
+        }
+        &.disabled {
+          color: $wc-color-22;
+          cursor: not-allowed;
+        }
       }
     }
   }
 
-  h4.fmb-sub-headline {
-
-  }
-
   .fmb-section {
     padding-bottom: 20px;
+    color: $wc-color-07;
+    h4 {
+      @extend %wc-typo-05;
+      padding: 8px 0;
+    }
+    div {
+      @extend %wc-typo-07;
+    }
+    section {
+      @extend %wc-typo-07;
+      //Some texts contain line-breaks, let's keep them.
+      .fmb-src-text > span {
+        white-space: pre-line;
+      }
+    }
+    .missing-info {
+      @extend %wc-typo-12;
+    }
   }
 
   .fmb-bullet-list {
     padding-left: 30px;
   }
 
-
   .fmb-footer {
     height: 50px;
     background-color: $wc-color-17;
-    color: white; //TODO: not specified?
+    color: $wc-color-00;
     display: flex;
     align-items: center;
     justify-content: space-between;
