--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -62,6 +62,7 @@
   @import 'components/wcIntygRelatedRevokedMessage/wcIntygRelatedRevokedMessage.directive.scss';
   @import 'components/wcNewPersonIdMessage/wcNewPersonIdMessage.scss';
   @import 'components/wcPatientInfoChangeMessage/wcPatientInfoChangeMessage.scss';
+  @import 'components/wcReadMoreTextBlock/wcReadMoreTextBlock.directive.scss';
   @import 'components/wcSekretessAvliden/wcSekretessAvliden.directive.scss';
   @import 'components/wcSpinner/wcSpinner.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss';
@@ -75,6 +76,7 @@
   @import 'css/_legacy-to-be-removed.scss';
   @import 'css/_wc-uv-override.scss';
   @import 'css/card.scss';
+  @import 'css/flex-app-layout.scss';
   @import 'css/generic-input.scss';
   @import 'fk/arenden/_arende.scss';
   @import 'fk/arenden/komplettera/komplettering-modal-dialog.scss';
@@ -116,74 +118,6 @@
 
 
 
-  //Flexbox app framwork classes -----------------------------
-
-
-  /*
-    root class for flex layout
-   */
-  .webcert-workarea {
-    //Constrain content to max width..
-    max-width: $wc-max-content-width;
-
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    //center content (will show whitespace on sides)
-    align-self: center;
-    width: 100%;
-    min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
-
-
-    //defines padding for "page" workarea containers
-    .webcert-workarea-page {
-      //NOTE: Minimum of 15 padding left/right is needed to handle bootstrap grid negative margins
-      padding: 20px 15px 30px 15px;
-
-      &.container-fluid {
-        //all "page-templates" / views such as sök / skriv intyg, ej signerade utkast etc should also have this as root, to get inner vertical scrollbar
-        // and to work bootstraps with rows / cols
-        width: 100%;
-        overflow-y: auto;
-      }
-    }
-
-    .webcert-workarea-vflex-container {
-      display: flex;
-      flex:1;
-      flex-direction: column;
-      min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
-    }
-
-
-    // Some views have deeper containers that take up extra vertical space, and
-    // handle their own overflow, eg intyg / supportpanel.
-    .webcert-workarea-hflex-container {
-      display: flex;
-      flex: 1;
-      min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
-
-      .webcert-workarea-intyg {
-        position: relative; //important: needs to be relative for anchorScroll to work
-        flex: 3;
-        overflow-y: auto;
-        padding: 20px 15px 30px 15px;
-        background-color: $wc-color-27;
-      }
-      .webcert-workarea-supportpanel {
-        flex: 2;
-
-        //NOTE: this temporary class to allow legacy arendehantering view to be in a scrollable container to the right of intyg.
-        // When ärendehantering is supported as a tab in in supportpanel, this construct can be removed.
-        &.remove-when-migrated-to-supportpanel-scrollable-flex-content {
-          padding: 20px;
-          overflow: auto;
-        }
-
-      }
-    }
-  }
-
 
 
 
@@ -199,15 +133,6 @@
     margin: 0 auto;
     width: 70%;
     max-width: 700px;
-  }
-
-  html,
-  body {
-    //Needed to allow having nested flex containers that expands & handle overflow themselves
-    height: 100%;
-    overflow:hidden;
-    display: flex;
-    flex-direction: column;
   }
 
   html {
