INTYG-5329: Rättade till bakgrundsfärg för värden och textfärgen för h3.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-uv-override.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-uv-override.scss
@@ -18,7 +18,7 @@
  */
 
 %value-card {
-  background-color: $wc-color-13;
+  background-color: $wc-color-28;
   padding: 8px 14px;
   display: inline-block;
   border-radius: 4px;
@@ -44,6 +44,7 @@ uv-kategori {
       font-weight: bold;
       font-family: $font-0, $font-3;
       padding: 20px 0 6px;
+      color: $wc-color-08;
     }
   }
 
