INTYG-5243: Refactor klart. Basic stylingramverk på intygheader klart.

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form15.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form15.html
@@ -18,7 +18,7 @@
       <div class="form-horizontal">
           <wc-validation-wrapper field-type="single-text" label-col-size="3" validations="viewState.getValidationErrors('grunddata.skapadav.vardenhet.postadress')">
             <div class="form-group">
-                  <label class="col-md-3 control-label label__no-break">Postadress <span class="required">*</span></label>
+                  <label class="col-md-3 control-label white-space-no-wrap">Postadress <span class="required">*</span></label>
                   <div class="col-md-9">
                       <input type="text" class="form-control input-50" id="clinicInfoPostalAddress"
                              name="clinicInfo.postalAddress"
@@ -31,7 +31,7 @@
 
           <wc-validation-wrapper field-type="single-text" label-col-size="3" validations="viewState.getValidationErrors('grunddata.skapadav.vardenhet.postnummer')">
             <div class="form-group">
-                  <label class="col-md-3 control-label label__no-break">Postnummer <span class="required">*</span></label>
+                  <label class="col-md-3 control-label white-space-no-wrap">Postnummer <span class="required">*</span></label>
 
                   <div class="col-md-9">
                       <input type="text" class="form-control input-5" id="clinicInfoPostalCode"
@@ -44,7 +44,7 @@
 
           <wc-validation-wrapper field-type="single-text" label-col-size="3" validations="viewState.getValidationErrors('grunddata.skapadav.vardenhet.postort')">
             <div class="form-group">
-                  <label class="col-md-3 control-label label__no-break">Postort <span class="required">*</span></label>
+                  <label class="col-md-3 control-label white-space-no-wrap">Postort <span class="required">*</span></label>
 
                   <div class="col-md-9">
                       <input type="text" class="form-control" id="clinicInfoPostalCity" name="clinicInfo.postalCity"
@@ -57,7 +57,7 @@
 
           <wc-validation-wrapper field-type="single-text" label-col-size="3" validations="viewState.getValidationErrors('grunddata.skapadav.vardenhet.telefonnummer')">
             <div class="form-group">
-                <label class="col-md-3 control-label label__no-break">Telefonnummer <span class="required">*</span></label>
+                <label class="col-md-3 control-label white-space-no-wrap">Telefonnummer <span class="required">*</span></label>
 
                 <div class="col-md-9">
                     <input type="text" class="form-control" id="clinicInfoPhone" name="clinicInfo.phone"
