--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/layout-util.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/layout-util.scss
@@ -1,4 +1,4 @@
-/*
+/*!
  * Copyright (C) 2018 Inera AB (http://www.inera.se)
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
@@ -16,17 +16,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-angular.module('common').controller('common.IntygHeader', [ '$scope', '$state',
-    'IntygViewState', 'common.IntygHeaderViewState', 'common.IntygHeaderService',
-    function($scope, $state,
-        IntygViewState, IntygHeaderViewState, IntygHeaderService) {
-       'use strict';
 
-        $scope.intygViewState = IntygViewState;
-        IntygHeaderViewState.setIntygViewState(IntygViewState);
-
-        $scope.$on('intyg.loaded', function(event, intyg){
-            IntygHeaderService.updatePreviousIntygUtkast(intyg);
-        });
-
-    }]);
+.white-space-no-wrap {
+  white-space: nowrap;
+}
