--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/wc-page-header.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/wc-page-header.scss
@@ -37,4 +37,17 @@
     padding: 0;
     margin: 0;
   }
+
+  /* intyg/utkast headers */
+  a {
+    &.backlink-icon {
+      display: inline-block;
+      width: 24px;
+      height: 24px;
+      margin: 0 10px 0 0;
+    }
+    &:hover.backlink-icon {
+      text-decoration: none;
+    }
+  }
 }
