--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSynskarpa/ueSynskarpa.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSynskarpa/ueSynskarpa.directive.scss
@@ -20,5 +20,11 @@
 ue-synskarpa {
   input.form-control {
     width: 38px;
+    border-radius: 4px;
+    border: solid 1px $wc-color-15;
+  }
+  input.form-control:active {
+    box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.12);
+    border: solid 1px $wc-color-21;
   }
 }
