INTYG-5243: Avliden fixad. Bättre stylingfelsökning med divs.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.scss
@@ -18,6 +18,7 @@
  */
 
 wc-alert-message {
+  display: inline-block; /* so it is easier to see bounding box in inspector */
 
   .alert {
     display: inline-block;
