--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSekretessAvliden/wcSekretessAvliden.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSekretessAvliden/wcSekretessAvliden.directive.html
@@ -1,10 +1,10 @@
-<span>
-  <span ng-if="printlabel">
+<div>
+  <div ng-if="printlabel">
     <wc-alert-message id="wc-avliden-text-{{ uuid }}" ng-if="avliden"
           wc-alert-message alert-severity="warning"
           class="patient-alert">Patienten har avlidit</wc-alert-message >
     <wc-alert-message id="wc-sekretessmarkering-text-{{ uuid }}" ng-if="sekretessmarkering"
           alert-severity="sekretess"
           class="patient-alert">Patienten har sekretessmarkering</wc-alert-message >
-  </span>
-</span>
+  </div>
+</div>
