--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -44,6 +44,8 @@
   @import 'components/headers/wcAppHeader/wcAppHeader.directive.scss';
   @import 'components/headers/wcAppHeader/wcAppHeader.variables.scss';
   @import 'components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.scss';
+  @import 'components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/wcFaqQuestion.directive.scss';
+  @import 'components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/wcFaqToggler.directive.scss';
   @import 'components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.scss';
   @import 'components/headers/wcAppHeader/wcHeaderUnit/wcChangeActiveUnitDialog.scss';
   @import 'components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.scss';
