INTYG-5425: Använder nya wc-custom-icon fontens ikoner

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-normal-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-normal-partial.html
@@ -143,7 +143,8 @@
 
 <!-- Tekniska frågor -->
 <div class="category">
-  <h2>(wc-ikon-29) Tekniska frågor</h2>
+
+  <h2><i class="icon-wc-ikon-tek-fragor icon-wc-24"></i> Tekniska frågor</h2>
 
   <wc-faq-question title="Varför ska jag inte använda Chrome eller Edge när jag loggar in i Webcert?">
     <p>För att använda Webcert ska du använda Internet Explorer 11 eller en efterföljande version. Webbläsarna Chrome och Edge stödjer inte den metod som Webcert använder för att skapa signaturer.</p>
