INTYG-5394: ts-basutkastvyn konverterad till ue

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.scss
@@ -21,6 +21,7 @@ wc-alert-message {
 
   .alert {
     display: inline-block;
+    vertical-align: top;
     position: relative;
     padding: 8px 9px 7px 38px;
 
