--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.html
@@ -15,7 +15,7 @@
                  value="{{choice.id}}"
                  ng-model="modelGetterSetter"
                  ng-model-options="{ getterSetter: true }"
-                 ng-change="onChange()">
+                 ng-change="updateValidation()">
           <span dynamic-label key="{{::choice.label}}"></span>
         </label>
         <div ng-if="::config.enableHelp">
