INTYG-5340: la till placeholder och att man bara kan fylla i siffror i årsfält

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueYear/ueYear.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueYear/ueYear.directive.html
@@ -14,7 +14,9 @@
                ng-model-options="{ getterSetter: true }"
                ng-disabled="::config.disabled"
                maxlength="4"
-               ng-blur="updateValidation()">
+               ng-blur="updateValidation()"
+               wc-number="true"
+               placeholder="åååå">
       </div>
     </div>
   </ue-validation-wrapper>
