--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
@@ -41,6 +41,11 @@ body {
   align-self: center;
   width: 100%;
   min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
+  
+  //when workarea is empty, hide it.
+  &:empty {
+    display: none;
+  }
 
 
   //defines padding for "page" workarea containers
@@ -90,5 +95,17 @@ body {
       }
 
     }
+  }
+}
+
+.webcert-landing {
+  flex: 1 1;
+  display: flex;
+  min-height: 1%;
+  overflow: auto;
+  flex-direction: column;
+
+  &:empty {
+    display: none;
   }
 }
